syntax = "proto3";

package controller;

option java_multiple_files = true;
option java_package = "ru.expanse.user.proto";

service GrpcUserController {
  rpc addUser (UserDto) returns (UserResponse);
  rpc isValidUser (UserRequest) returns (UserResponse);
  rpc getUserById (UserRequest) returns (UserResponse);
  rpc getFilteredUsers (UserFilterRequest) returns (UserResponse);
  rpc updateUser (UserDto) returns (UserResponse);
  rpc deleteUser (UserRequest) returns (UserResponse);
}

message UserDto {
  string id = 1;
  string accountId = 2;
  bool isBlocked = 3;
  string name = 4;
  string email = 5;
  string phoneNumber = 6;
  int64 birthDate = 7;
}

message UserRequest {
  string id = 1;
}

message UserFilterRequest {
  string name = 1;
  string email = 2;
  int64 startBirthDate = 3;
  int64 endBirthDate = 4;
}

message UserResponse {
  bool isSuccessful = 1;
  repeated UserDto users = 2;
}